<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="?attr/colorSurface">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_tab_tests"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadlineLarge"
            android:textColor="?attr/colorOnSurface"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/custom_scheme"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/custom_scheme_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_scheme_cat"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/custom_scheme_dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_scheme_dog" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/https"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chrome_dal_verification"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/https_turtle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/https_turtle"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/android_asset_link"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/https_otter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/https_otter"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/unverified"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="?attr/colorOnSurface"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/https_owl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/https_owl" />

    </LinearLayout>
</ScrollView>
